# orca-quote

./: .env.example  .gitignore  Cargo.toml  Makefile.toml
js/: .eslintignore  .eslintrc.yml  package.json
js/src/: main.ts
src/: api.rs  main.rs  quote.rs  utils.rs
