[package]
name = "orca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "=0.29.0"
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
anyhow = "1.0.86"
arrayref = { version = "0.3.6" }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = "0.11.27"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
solana-client = "1.16.18"
solana-program = "1.16.18"
solana-sdk = "1.16.18"
whirlpool = { git = "https://github.com/0xcrust/whirlpools.git", branch = "patch/spl-token-interface" }
tokio = "1.38.0"

